--- a/admin/index.html
+++ b/admin/index.html
@@ -183,9 +183,50 @@
       <!-- Collectors panel -->
       <section id="panel-collectors" class="admin-panel">
         <h1 class="page-title">Collectors</h1>
-        <p class="page-subtitle">Registered collector accounts.</p>
+        <p class="page-subtitle">Add and manage collector accounts.</p>
+        <p style="margin-bottom: 1rem;">
+          <button type="button" class="btn btn-primary" id="btn-show-add-collector">Add new collector</button>
+        </p>
+        <div id="add-collector-form-wrap" class="modal-backdrop is-hidden" aria-hidden="true">
+          <div class="modal-dialog" role="dialog" aria-labelledby="add-collector-title">
+            <button type="button" class="modal-close" id="btn-close-add-collector" aria-label="Close">&times;</button>
+            <div class="form-card collectors-form">
+              <h3 id="add-collector-title" style="margin: 0 0 1rem;">Add new collector</h3>
+              <form id="add-collector-form">
+                <div class="form-group">
+                  <label for="collector-username">Username</label>
+                  <input type="text" id="collector-username" placeholder="e.g. john_collector" required autocomplete="off">
+                </div>
+                <div class="form-group">
+                  <label for="collector-password">Password</label>
+                  <input type="password" id="collector-password" placeholder="Choose a password" required autocomplete="new-password">
+                </div>
+                <div class="form-group">
+                  <label for="collector-password-confirm">Confirm password</label>
+                  <input type="password" id="collector-password-confirm" placeholder="Repeat password" required autocomplete="new-password">
+                </div>
+                <p id="collector-message" class="form-message" style="display: none; margin-bottom: 1rem;"></p>
+                <button type="submit" class="btn btn-primary btn-block">Add collector</button>
+              </form>
+            </div>
+          </div>
+        </div>
         <div class="report-section">
-          <div id="collectors-list" class="collectors-list"></div>
+          <h3 style="margin: 0 0 1rem;">Registered collectors</h3>
+          <div class="collectors-table-wrap">
+            <table id="collectors-table" class="collectors-table">
+              <thead>
+                <tr>
+                  <th>Username</th>
+                  <th>Role</th>
+                  <th>Status</th>
+                  <th>Actions</th>
+                </tr>
+              </thead>
+              <tbody id="collectors-list"></tbody>
+            </table>
+            <p id="collectors-empty" class="empty-state" style="display: none;">No collectors registered. Click &quot;Add new collector&quot; to add one.</p>
+          </div>
         </div>
       </section>
     </main>
